--- a/app/src/main/res/layout/activity_pengaturan.xml
+++ b/app/src/main/res/layout/activity_pengaturan.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/colorBackgroundActivity"
     android:layout_height="match_parent"
+    android:background="@color/colorBackgroundActivity"
     tools:context=".ui.saya.PengaturanActivity">
 
     <RelativeLayout
@@ -37,211 +37,261 @@
 
     </RelativeLayout>
 
-    <RelativeLayout
-        android:id="@+id/rl_ganti_password"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/rl_toolbar"
-        android:layout_marginTop="14dp"
-        android:paddingHorizontal="16dp"
-        android:paddingVertical="10dp">
+        android:layout_height="match_parent"
+        android:layout_below="@id/rl_toolbar">
 
-        <ImageView
-            android:id="@+id/img_lock"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:src="@drawable/ic_baseline_lock_24"
-            app:tint="@color/grey_hint" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginHorizontal="16dp"
-            android:layout_toRightOf="@id/img_lock"
-            android:text="Ubah Password"
-            android:textColor="@color/grey_hint"
-            android:textStyle="bold" />
+            <RelativeLayout
+                android:id="@+id/rl_ganti_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="14dp"
+                android:paddingHorizontal="16dp"
+                android:paddingVertical="10dp">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:src="@drawable/ic_baseline_chevron_right_24"
-            app:tint="@color/grey_hint" />
+                <ImageView
+                    android:id="@+id/img_lock"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_baseline_lock_24"
+                    app:tint="@color/grey_hint" />
 
-    </RelativeLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginHorizontal="16dp"
+                    android:layout_toRightOf="@id/img_lock"
+                    android:text="Ubah Password"
+                    android:textColor="@color/grey_hint"
+                    android:textStyle="bold" />
 
-    <RelativeLayout
-        android:id="@+id/rl_data_akun"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/rl_ganti_password"
-        android:layout_marginTop="14dp"
-        android:paddingHorizontal="16dp"
-        android:paddingVertical="10dp">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_baseline_chevron_right_24"
+                    app:tint="@color/grey_hint" />
 
-        <ImageView
-            android:id="@+id/img_data_akun"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:src="@drawable/ic_baseline_contact_emergency_24"
-            app:tint="@color/grey_hint" />
+            </RelativeLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginHorizontal="16dp"
-            android:layout_toRightOf="@id/img_data_akun"
-            android:text="Data Akun"
-            android:textColor="@color/grey_hint"
-            android:textStyle="bold" />
+            <RelativeLayout
+                android:id="@+id/rl_data_akun"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/rl_ganti_password"
+                android:layout_marginTop="14dp"
+                android:paddingHorizontal="16dp"
+                android:paddingVertical="10dp">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:src="@drawable/ic_baseline_chevron_right_24"
-            app:tint="@color/grey_hint" />
+                <ImageView
+                    android:id="@+id/img_data_akun"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_baseline_contact_emergency_24"
+                    app:tint="@color/grey_hint" />
 
-    </RelativeLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginHorizontal="16dp"
+                    android:layout_toRightOf="@id/img_data_akun"
+                    android:text="Data Akun"
+                    android:textColor="@color/grey_hint"
+                    android:textStyle="bold" />
 
-    <RelativeLayout
-        android:id="@+id/rl_kebijakan"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="14dp"
-        android:layout_below="@id/rl_data_akun"
-        android:paddingHorizontal="16dp"
-        android:paddingVertical="10dp">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_baseline_chevron_right_24"
+                    app:tint="@color/grey_hint" />
 
-        <ImageView
-            android:id="@+id/img_kebijakan"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:src="@drawable/ic_baseline_privacy_tip_24"
-            app:tint="@color/grey_hint" />
+            </RelativeLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginHorizontal="16dp"
-            android:layout_toRightOf="@id/img_kebijakan"
-            android:text="Kebijakan Privasi"
-            android:textColor="@color/grey_hint"
-            android:textStyle="bold" />
+            <RelativeLayout
+                android:id="@+id/rl_lencana_alumni"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/rl_data_akun"
+                android:layout_marginTop="14dp"
+                android:paddingHorizontal="16dp"
+                android:paddingVertical="10dp"
+                tools:ignore="UseSwitchCompatOrMaterialXml">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:src="@drawable/ic_baseline_chevron_right_24"
-            app:tint="@color/grey_hint" />
+                <ImageView
+                    android:id="@+id/img_lencana"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_baseline_verified_24"
+                    app:tint="@color/grey_hint" />
 
-    </RelativeLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginHorizontal="16dp"
+                    android:layout_toRightOf="@id/img_lencana"
+                    android:text="Lencana Alumni"
+                    android:textColor="@color/grey_hint"
+                    android:textStyle="bold" />
 
-    <RelativeLayout
-        android:id="@+id/rl_penilaian"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="14dp"
-        android:layout_below="@id/rl_kebijakan"
-        android:paddingHorizontal="16dp"
-        android:paddingVertical="10dp">
+                <Switch
+                    android:id="@+id/switch_alumni"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true" />
 
-        <ImageView
-            android:id="@+id/img_penilaian"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:src="@drawable/ic_baseline_star_rate_24"
-            app:tint="@color/grey_hint" />
+            </RelativeLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginHorizontal="16dp"
-            android:layout_toRightOf="@id/img_penilaian"
-            android:text="Nilai Aplikasi UINAMFind"
-            android:textColor="@color/grey_hint"
-            android:textStyle="bold" />
+            <RelativeLayout
+                android:id="@+id/rl_kebijakan"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/rl_lencana_alumni"
+                android:layout_marginTop="14dp"
+                android:paddingHorizontal="16dp"
+                android:paddingVertical="10dp">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:src="@drawable/ic_baseline_chevron_right_24"
-            app:tint="@color/grey_hint" />
+                <ImageView
+                    android:id="@+id/img_kebijakan"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_baseline_privacy_tip_24"
+                    app:tint="@color/grey_hint" />
 
-    </RelativeLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginHorizontal="16dp"
+                    android:layout_toRightOf="@id/img_kebijakan"
+                    android:text="Kebijakan Privasi"
+                    android:textColor="@color/grey_hint"
+                    android:textStyle="bold" />
 
-    <RelativeLayout
-        android:id="@+id/rl_perangkat"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="14dp"
-        android:layout_below="@id/rl_penilaian"
-        android:paddingHorizontal="16dp"
-        android:paddingVertical="10dp">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_baseline_chevron_right_24"
+                    app:tint="@color/grey_hint" />
 
-        <ImageView
-            android:id="@+id/img_perangkat"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:src="@drawable/ic_baseline_perm_device_information_24"
-            app:tint="@color/grey_hint" />
+            </RelativeLayout>
 
-        <TextView
-            android:id="@+id/tv_1_perangkat"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
-            android:layout_toRightOf="@id/img_perangkat"
-            android:text="Perangkat"
-            android:textColor="@color/grey_hint"
-            android:textSize="12sp" />
+            <RelativeLayout
+                android:id="@+id/rl_penilaian"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/rl_kebijakan"
+                android:layout_marginTop="14dp"
+                android:paddingHorizontal="16dp"
+                android:paddingVertical="10dp">
 
-        <TextView
-            android:id="@+id/tv_perangkat"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tv_1_perangkat"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginTop="5dp"
-            android:layout_toRightOf="@id/img_perangkat"
-            android:text="Samsung Galaxi XXX"
-            android:textColor="@color/grey_hint"
-            android:textStyle="bold" />
+                <ImageView
+                    android:id="@+id/img_penilaian"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_baseline_star_rate_24"
+                    app:tint="@color/grey_hint" />
 
-    </RelativeLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginHorizontal="16dp"
+                    android:layout_toRightOf="@id/img_penilaian"
+                    android:text="Nilai Aplikasi UINAMFind"
+                    android:textColor="@color/grey_hint"
+                    android:textStyle="bold" />
 
-    <RelativeLayout
-        android:id="@+id/rl_keluar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/rl_perangkat"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="50dp"
-        android:background="@drawable/bg_stroke_white3">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_baseline_chevron_right_24"
+                    app:tint="@color/grey_hint" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_marginVertical="10dp"
-            android:text="Keluar" />
+            </RelativeLayout>
 
-    </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/rl_perangkat"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/rl_penilaian"
+                android:layout_marginTop="14dp"
+                android:paddingHorizontal="16dp"
+                android:paddingVertical="10dp">
+
+                <ImageView
+                    android:id="@+id/img_perangkat"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_baseline_perm_device_information_24"
+                    app:tint="@color/grey_hint" />
+
+                <TextView
+                    android:id="@+id/tv_1_perangkat"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="16dp"
+                    android:layout_toRightOf="@id/img_perangkat"
+                    android:text="Perangkat"
+                    android:textColor="@color/grey_hint"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/tv_perangkat"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tv_1_perangkat"
+                    android:layout_marginHorizontal="16dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_toRightOf="@id/img_perangkat"
+                    android:text="Samsung Galaxi XXX"
+                    android:textColor="@color/grey_hint"
+                    android:textStyle="bold" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/rl_keluar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/rl_perangkat"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginTop="50dp"
+                android:background="@drawable/bg_stroke_white3">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:layout_marginVertical="10dp"
+                    android:text="Keluar" />
+
+            </RelativeLayout>
+
+        </RelativeLayout>
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
