--- a/app/src/main/res/layout/activity_detail_mahasiswa.xml
+++ b/app/src/main/res/layout/activity_detail_mahasiswa.xml
@@ -564,6 +564,47 @@
 
                 </androidx.cardview.widget.CardView>
 
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cv_sosmed"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/cv_pendidikan_detail_mahasiswa"
+                    android:layout_marginTop="16dp"
+                    app:cardElevation="6dp">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/white">
+
+                        <TextView
+                            android:id="@+id/tv1_sosmed"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginHorizontal="16dp"
+                            android:layout_marginTop="16dp"
+                            android:text="Media Sosial"
+                            android:textColor="@color/black"
+                            android:textSize="18sp"
+                            android:textStyle="bold" />
+
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/rv_sosmed"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/tv1_sosmed"
+                            android:layout_marginTop="8dp"
+                            android:layout_marginBottom="8dp"
+                            android:clipToPadding="false"
+                            android:paddingLeft="16dp"
+                            tools:itemCount="1"
+                            tools:listitem="@layout/item_icon_sosmed" />
+
+
+                    </RelativeLayout>
+
+                </androidx.cardview.widget.CardView>
+
             </RelativeLayout>
 
         </androidx.core.widget.NestedScrollView>
