--- a/app/src/main/res/layout/activity_ukm.xml
+++ b/app/src/main/res/layout/activity_ukm.xml
@@ -37,73 +37,79 @@
 
     </RelativeLayout>
 
-    <androidx.core.widget.NestedScrollView
+    <!--    <androidx.core.widget.NestedScrollView-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="match_parent"-->
+    <!--        android:layout_below="@id/rl_toolbar_ukm">-->
+
+    <!--        <RelativeLayout-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="match_parent">-->
+
+    <!--            <TextView-->
+    <!--                android:id="@+id/tv1_ukm"-->
+    <!--                android:layout_width="wrap_content"-->
+    <!--                android:layout_height="wrap_content"-->
+    <!--                android:layout_marginHorizontal="16dp"-->
+    <!--                android:layout_marginTop="16dp"-->
+    <!--                android:text="Pendaftaran Terbuka"-->
+    <!--                android:textColor="@color/black"-->
+    <!--                android:textSize="16sp"-->
+    <!--                android:textStyle="bold" />-->
+
+    <!--            <androidx.cardview.widget.CardView-->
+    <!--                android:id="@+id/cv_pendaftaran_terbuka_ukm"-->
+    <!--                android:layout_width="match_parent"-->
+    <!--                android:layout_height="wrap_content"-->
+    <!--                android:layout_below="@id/tv1_ukm"-->
+    <!--                android:layout_marginTop="12dp"-->
+    <!--                app:cardElevation="4dp">-->
+
+    <!--                <RelativeLayout-->
+    <!--                    android:layout_width="match_parent"-->
+    <!--                    android:layout_height="wrap_content"-->
+    <!--                    android:background="@color/white">-->
+
+    <!--                    <androidx.recyclerview.widget.RecyclerView-->
+    <!--                        android:id="@+id/rv_pendaftaran_terbuka_ukm"-->
+    <!--                        android:layout_width="match_parent"-->
+    <!--                        android:layout_height="wrap_content"-->
+    <!--                        tools:itemCount="1"-->
+    <!--                        tools:listitem="@layout/item_pendaftaran_terbuka_ukm" />-->
+
+    <!--                </RelativeLayout>-->
+
+    <!--            </androidx.cardview.widget.CardView>-->
+
+    <!--            <TextView-->
+    <!--                android:id="@+id/tv2_ukm"-->
+    <!--                android:layout_width="wrap_content"-->
+    <!--                android:layout_height="wrap_content"-->
+    <!--                android:layout_below="@id/cv_pendaftaran_terbuka_ukm"-->
+    <!--                android:layout_marginHorizontal="16dp"-->
+    <!--                android:layout_marginTop="20dp"-->
+    <!--                android:text="Semua UKM"-->
+    <!--                android:textColor="@color/black"-->
+    <!--                android:textSize="16sp"-->
+    <!--                android:textStyle="bold" />-->
+
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_ukm"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/rl_toolbar_ukm">
 
-        <RelativeLayout
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_ukm"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            tools:itemCount="1"
+            tools:listitem="@layout/item_ukm" />
 
-            <TextView
-                android:id="@+id/tv1_ukm"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="16dp"
-                android:layout_marginTop="16dp"
-                android:text="Pendaftaran Terbuka"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                android:textStyle="bold" />
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cv_pendaftaran_terbuka_ukm"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tv1_ukm"
-                android:layout_marginTop="12dp"
-                app:cardElevation="4dp">
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/white">
-
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/rv_pendaftaran_terbuka_ukm"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        tools:itemCount="1"
-                        tools:listitem="@layout/item_pendaftaran_terbuka_ukm" />
-
-                </RelativeLayout>
-
-            </androidx.cardview.widget.CardView>
-
-            <TextView
-                android:id="@+id/tv2_ukm"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/cv_pendaftaran_terbuka_ukm"
-                android:layout_marginHorizontal="16dp"
-                android:layout_marginTop="20dp"
-                android:text="Semua UKM"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                android:textStyle="bold" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_ukm"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_below="@id/tv2_ukm"
-                android:layout_marginTop="12dp"
-                tools:itemCount="1"
-                tools:listitem="@layout/item_ukm" />
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 
-        </RelativeLayout>
+    <!--        </RelativeLayout>-->
 
-    </androidx.core.widget.NestedScrollView>
+    <!--    </androidx.core.widget.NestedScrollView>-->
 </RelativeLayout>
