--- a/app/src/main/res/layout/activity_lamar_loker.xml
+++ b/app/src/main/res/layout/activity_lamar_loker.xml
@@ -288,7 +288,7 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="Resume*"
+                                android:text="KTP*"
                                 android:textColor="@color/black"
                                 android:textSize="12sp"
                                 android:textStyle="bold" />
