--- a/app/src/main/res/layout/activity_login_mahasiswa.xml
+++ b/app/src/main/res/layout/activity_login_mahasiswa.xml
@@ -99,8 +99,8 @@
         android:layout_marginTop="16dp"
         android:textColorHint="@color/white"
         app:boxStrokeColor="@color/white"
-        app:endIconTint="@color/white"
         app:endIconMode="password_toggle"
+        app:endIconTint="@color/white"
         app:hintTextColor="@color/white"
         app:startIconTint="@color/white">
 
@@ -117,14 +117,14 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
-        android:id="@+id/tv_lupa_password_login_mahasiswa"
+        android:id="@+id/tv_bantuan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/til_password_login_mahasiswa"
         android:layout_alignParentRight="true"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="20dp"
-        android:text="Lupa Password ?"
+        android:text="Bantuan ?"
         android:textColor="@color/white"
         android:textStyle="bold" />
 
@@ -132,7 +132,7 @@
         android:id="@+id/rl_btn_masuk_mahasiswa"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tv_lupa_password_login_mahasiswa"
+        android:layout_below="@id/tv_bantuan"
         android:layout_centerHorizontal="true"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="24dp"
