--- a/app/src/main/res/layout/activity_detail_lamaran_recruiter.xml
+++ b/app/src/main/res/layout/activity_detail_lamaran_recruiter.xml
@@ -301,7 +301,7 @@
                 android:layout_below="@id/cv_2"
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="20dp"
-                android:text="File CV"
+                android:text="KTP Pelamar"
                 android:textColor="@color/black"
                 android:textStyle="bold" />
 
