--- a/app/src/main/res/layout/activity_tambah_perusahaan.xml
+++ b/app/src/main/res/layout/activity_tambah_perusahaan.xml
@@ -178,7 +178,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Jumlah Pegawai*"
+                    android:text="Jumlah Pegawai* (Orang)"
                     android:textColor="@color/black"
                     android:textSize="12sp" />
 
