--- a/app/src/main/res/layout/item_market.xml
+++ b/app/src/main/res/layout/item_market.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/sample_market_1" />
+            android:src="@drawable/header_lembaga_default" />
 
         <TextView
             android:id="@+id/tv_judul_item_market"
@@ -55,11 +55,13 @@
 
         <TextView
             android:id="@+id/tv_hubungi_item_market"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/view1_item_market"
             android:layout_centerHorizontal="true"
-            android:layout_marginVertical="10dp"
+            android:layout_marginVertical="6dp"
+            android:gravity="center"
+            android:paddingVertical="5dp"
             android:text="Hubungi"
             android:textColor="@color/colorPrimary"
             android:textStyle="bold" />
